ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8-social
  namespace: kube-social
  labels:
    name: ing-k8
spec:  
  tls:
    - hosts:
      - localhost
      secretName: tls-secret
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak
            port:
              number: 443
